[tool.poetry]
name = "trellome"
version = "0.1.0"
description = "A personal trello api python wrapper for daily job which can not be done by offical website and app."
authors = ["Ray <linxray@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
filter-list = 'command.filter_board_card:filter_board_list'
filter-card = 'command.filter_board_card:filter_board_card'
